# offline-web-search

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  VERSIONS.md  add_external_source.py  build_local_index.py  client_mcp_adapter.py  experiments_ranking.py  library.xml  library.xml.example  offline_search_adapter.py  package_for_offline.ps1  pyproject.toml  repro_fts_error.py  requirements.txt  search_server.py  test_search.py
.claude/agents/: offline-search-agent.md
.github/workflows/: ci.yml  release.yml
scripts/: build_library.ps1  build_library.sh  install_claude_code.ps1  install_claude_code.sh
skills/offline-search/: SKILL.md
skills/offline-search/scripts/: fetch_page.py  search.py
skills/setup/: SKILL.md
skills/setup/scripts/: setup.sh
skills/zimit/: SKILL.md
skills/zimit/scripts/: zimit.sh
src/offline_search/: __init__.py  catalog.py  config.py  formatter.py  indexer.py  kiwix.py  mcp.py  mcp_client.py  mcp_local.py  search_engine.py  server.py  updater.py
tests/: conftest.py  test_agent_config.py  test_build_library.py  test_build_library_integration.py  test_catalog.py  test_config.py  test_e2e_journey.py  test_formatter.py  test_indexer.py  test_kiwix.py  test_mcp.py  test_search_engine.py  test_server.py  test_skill.py  test_system.py  test_updater.py
tests/data/: devdocs_en_qunit_2026-01.zim
