[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offline-search"
version = "1.0.0"
description = "Offline documentation search engine exposed via MCP — a drop-in replacement for web search tools in air-gapped environments."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Offline Search Contributors" }]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "zimply>=1.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "markdownify>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",           # for FastAPI TestClient
    "ruff>=0.4.0",
]

[project.scripts]
offline-search-mcp     = "offline_search.mcp_local:main"
offline-search-client  = "offline_search.mcp_client:main"
offline-search-server  = "offline_search.server:main"
offline-search-index   = "offline_search.indexer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/offline_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
