[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "offline-search"
dynamic = ["version"]
description = "Offline documentation search engine exposed via MCP — a drop-in replacement for web search tools in air-gapped environments."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Offline Search Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
keywords = ["mcp", "offline", "search", "kiwix", "zim", "documentation", "claude", "ai"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "libzim>=3.6.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "markdownify>=0.14.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/relz6/offline-search"
Repository = "https://github.com/relz6/offline-search"
Issues = "https://github.com/relz6/offline-search/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",           # for FastAPI TestClient
    "ruff>=0.4.0",
]

[project.scripts]
offline-search-mcp     = "offline_search.mcp:main"
offline-search-server  = "offline_search.server:main"
offline-search-index   = "offline_search.indexer:main"
offline-search-update  = "offline_search.updater:main"
offline-search-catalog = "offline_search.catalog:main"

[tool.hatch.build.targets.wheel]
packages = ["src/offline_search"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/offline_search/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests that require real binaries (deselected by default)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
